# HW_11.1

./: README.md  main.py  pyproject.toml
logs/: mylog.txt
src/: decorators.py  external_api.py  generators.py  masks.py  processing.py  reading_files.py  save_to_file.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_reading_files.py  test_utils.py  test_widget.py
