[tool.poetry]
name = "hw-11-1"
version = "0.1.0"
description = ""
authors = ["Ivan Glushenkov <glushman966@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_11"}]

[tool.poetry.dependencies]
python = "^3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.black]
line_length = 119
exclude = ".git"

[tool.isort]
line_length = 119
force_single_line = true

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = "venv"